# world-alchemist

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md
crates/alembscript/alembscript-compiler/: Cargo.toml
crates/alembscript/alembscript-compiler/src/: lib.rs
crates/alembscript/alembscript-runtime/: Cargo.toml
crates/alembscript/alembscript-syntax/: Cargo.toml
crates/alembscript/alembscript-syntax/src/: alembscript.pest
crates/wmms/wmms-aspects/: Cargo.toml
crates/wmms/wmms-aspects/src/: error.rs  lib.rs  path.rs  query.rs  registry.rs  set.rs
crates/wmms/wmms-assets/: Cargo.toml
crates/wmms/wmms-core/: Cargo.toml
crates/wmms/wmms-core/src/: canon.rs  error.rs  hash.rs  ids.rs  lib.rs  num.rs  rng.rs  time.rs
crates/wmms/wmms-mechanics/: Cargo.toml
crates/wmms/wmms-model/: Cargo.toml
crates/wmms/wmms-model/src/: aspects.rs  attr.rs  diff.rs  effect.rs  effect_ops.rs  entity.rs  ids.rs  index.rs  lib.rs  model.rs  relations.rs  view.rs
crates/wmms/wmms-runtime/: Cargo.toml
crates/wmms/wmms-signals/: Cargo.toml
crates/wmms/wmms-storage/: Cargo.toml
crates/wmms/wmms-toolings/: Cargo.toml
crates/world-cli/: Cargo.toml
crates/world-universe/: Cargo.toml
crates/world-universe/src/: cache.rs  error.rs  lib.rs  session.rs  universe.rs  world_root.rs
docs/concepts/: mms-framework.md  world-universe-graph.md
src/: app.rs  i18n.rs  main.rs
