[workspace]
resolver = "3"
members = [
    "crates/alembscript/alembscript-compiler", 
    "crates/alembscript/alembscript-runtime",
    "crates/alembscript/alembscript-syntax",
    "crates/wmms/wmms-aspects",
    "crates/wmms/wmms-assets",
    "crates/wmms/wmms-core",
    "crates/wmms/wmms-mechanics",
    "crates/wmms/wmms-model",
    "crates/wmms/wmms-runtime", 
    "crates/wmms/wmms-signals", 
    "crates/wmms/wmms-storage", 
    "crates/wmms/wmms-toolings", 
    "crates/world-cli", 
    "crates/world-universe"
    ]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Vincent Roy <metakernel@outlook.com>"]
license = "AGPL-3.0-only"

[workspace.dependencies]

# World Alchemist crates
world-cli = { path = "crates/world-cli" }

# wmms crates
wmms-core = { path = "crates/wmms/wmms-core" }
wmms-runtime = { path = "crates/wmms/wmms-runtime" }
wmms-signals = { path = "crates/wmms/wmms-signals" }
wmms-storage = { path = "crates/wmms/wmms-storage" }
wmms-toolings = { path = "crates/wmms/wmms-toolings" }
wmms-model = { path = "crates/wmms/wmms-model" }
wmms-mechanics = { path = "crates/wmms/wmms-mechanics" }
wmms-aspects = { path = "crates/wmms/wmms-aspects" }
wmms-assets = { path = "crates/wmms/wmms-assets" }

# alembscript crates
alembscript-compiler = { path = "crates/alembscript/alembscript-compiler" }
alembscript-runtime = { path = "crates/alembscript/alembscript-runtime" }
alembscript-syntax = { path = "crates/alembscript/alembscript-syntax" }

serde = { version = "1.0.228", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
thiserror = "2.0.17"
miette = "7.6.0"
anyhow = "1.0.100"
blake3 = "1.8.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
num-traits = "0.2.19"

