[package]
name = "wmms-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = {workspace = true}
miette = {workspace = true}
blake3 = {workspace = true}
anyhow = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
num-traits = {workspace = true}