[package]
name = "wmms-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["id64"]
id64 = []
id128 = []

[dependencies]
thiserror = {workspace = true}
miette = {workspace = true}
blake3 = {workspace = true}
anyhow = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
num-traits = {workspace = true}